<resources>
    <string name="app_name">Reto TIC</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="texto">Texto</string>

    <string name="action_mas">más</string>
    <string name="menuOpción_1">Agregar</string>
    <string name="menuOpción_2">Opción 2</string>
    <string name="menuOpción_3">Opción 3</string>


    <string name="menu_home">Home</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_sucursales">Sucursales</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Productos -->
    <string name="producto1">Marco</string>
    <string name="producto2">Manurio</string>
    <string name="producto3">Ruedas</string>
    <string name="producto4">Pedales</string>
    <string name="producto5">Ropa</string>

    <!-- Servicios -->
    <string name="servicio1">Mantenimiento</string>
    <string name="servicio2">Limpieza</string>
    <string name="servicio3">Pintura</string>

    <!-- Sucursales-->
    <string name="sucursal1">Norte</string>
    <string name="sucursal2">Centro</string>

    <!-- Formulario -->
    <string name="formCampo1">Campo 1</string>
    <string name="formCampo2">Campo 2</string>
    <string name="formCampo3">Campo 3</string>
    <string name="formID">ID</string>
    <string name="txtButtonBuscar">BUSCAR</string>
    <string name="txtButtonInsertar">INSERTAR</string>
    <string name="txtButtonConsultar">CONSULTAR</string>
    <string name="txtButtonEliminar">ELIMINAR</string>
    <string name="txtButtonActualizar">ACTUALIZAR</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_show_maps">ShowMapsActivity</string>

</resources>