<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/logo"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_productos"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_productos" />
        <item
            android:id="@+id/nav_servicios"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/menu_servicios" />
        <item
            android:id="@+id/nav_sucursales"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_sucursales" />
    </group>
</menu>